--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "polymer": "Polymer/polymer#^2.x",
     "polymer-decorators": "Polymer/polymer-decorators#^2.0.0",
     "paper-button": "^2.1.0",
-    "app-media": "PolymerElements/app-media"
+    "app-media": "PolymerElements/app-media",
+    "paper-fab": "^2.1.0",
+    "iron-icons": "^2.1.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
