--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "paper-button": "^2.1.0",
     "app-media": "PolymerElements/app-media",
     "paper-fab": "^2.1.0",
-    "iron-icons": "^2.1.1"
+    "iron-icons": "^2.1.1",
+    "webrtc-adapter": "^6.1.5"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
